tests/good/arrays.pas
var x:array[1..3] of integer;

begin
x[2]:=1;
end.
