tests/bad/int3.pas
program int;
var
    i:;
begin

end.
